// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mergeTreePatches merge add-files and change-modes 1`] = `
Array [
  Object {
    "after": "01058d844a98d293a3b03a8615a34700e4ed2be3",
    "before": undefined,
    "filepath": "c/g",
    "ops": Array [
      "write",
    ],
  },
  Object {
    "after": "6a69f92020f5df77af6e8813ff1232493383b708",
    "before": undefined,
    "filepath": "f",
    "ops": Array [
      "write",
    ],
  },
  Object {
    "after": "78981922613b2afb6025042ff6bd878ac1994e85",
    "before": "78981922613b2afb6025042ff6bd878ac1994e85",
    "filepath": "a",
    "ops": Array [
      "chmod+x",
    ],
  },
  Object {
    "after": "4bcfe98e640c8284511312660fb8709b0afa888e",
    "before": "4bcfe98e640c8284511312660fb8709b0afa888e",
    "filepath": "c/d",
    "ops": Array [
      "chmod+x",
    ],
  },
]
`;

exports[`mergeTreePatches merge add-files and remove-files 1`] = `
Array [
  Object {
    "after": "01058d844a98d293a3b03a8615a34700e4ed2be3",
    "before": undefined,
    "filepath": "c/g",
    "ops": Array [
      "write",
    ],
  },
  Object {
    "after": "6a69f92020f5df77af6e8813ff1232493383b708",
    "before": undefined,
    "filepath": "f",
    "ops": Array [
      "write",
    ],
  },
  Object {
    "after": undefined,
    "before": "78981922613b2afb6025042ff6bd878ac1994e85",
    "filepath": "a",
    "ops": Array [
      "rm",
    ],
  },
  Object {
    "after": undefined,
    "before": "61780798228d17af2d34fce4cfbdf35556832472",
    "filepath": "b",
    "ops": Array [
      "rm",
    ],
  },
  Object {
    "after": undefined,
    "before": "4bcfe98e640c8284511312660fb8709b0afa888e",
    "filepath": "c/d",
    "ops": Array [
      "rm",
    ],
  },
  Object {
    "after": undefined,
    "before": "d905d9da82c97264ab6f4920e20242e088850ce9",
    "filepath": "c/e",
    "ops": Array [
      "rm",
    ],
  },
  Object {
    "after": undefined,
    "before": "faceb189bb665fe7a631602d904e57a4014187b7",
    "filepath": "c",
    "ops": Array [
      "rmdir",
    ],
  },
]
`;
